data/all_generated_tests/raw_wast_tests/call_StackCorruption_3203.wast
;; 2. **Test Description**: Call a function with fewer arguments than expected. Ensure the stack underflow is properly detected and handled.    **Constraint Checked**: Argument checking and underflow handling.    **Relation to Stack Corruption**: Underflow can leave the stack in an inconsistent state, leading to incorrect data usage.

(assert_invalid
  (module
    (type (func (param i32 i32)))
    (func $type-argument-underflow
      (call 0 (i32.const 42))
    )
    (func (param i32 i32))
  )
  "type mismatch"
)